Fix margin padding so there is no whitespace between image and title

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ ul
 
 #header-background
 {
-    margin-bottom: -0.21em;
+    margin-bottom: -0.22em;
 }
 
 #header-background img
